--- a/template.html
+++ b/template.html
@@ -10,7 +10,7 @@
   
   <body>
     <h1>Atom Simulator</h1>
-    <p>ADD DESCRIPTION HERE</p>
+    <p>Press up and down buttons, and w and s to control.</p>
     
     <script type="text/processing">
     
