--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
   </head>
   
   <body>
-    <h1>PUT YOUR TITLE HERE</h1>
-    <p>ADD DESCRIPTION HERE</p>
+    <h1Atom Simulator</h1>
+    <p>Press up, down, w, s to control the atom.</p>
     
     <script type="text/processing">
     
