--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   </head>
   
   <body>
-    <h1Atom Simulator</h1>
+    <h1>Atom Simulator</h1>
     <p>Press up, down, w, s to control the atom.</p>
     
     <script type="text/processing">
